--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <title>Github Actions Lab</title>
+    <title>Github Actions Lab New 02</title>
 </body>
 </html>
